--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,5 +12,9 @@
   "plugins": ["@typescript-eslint"],
   "ignorePatterns": ["**/build/*", "**/node_modules/*", "**/public/*"],
   "rules": {
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/strict-boolean-expressions": "off",
+    "no-return-assign": "off",
+    "@typescript-eslint/no-misused-promises": "off"
   }
 }
