--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prepare": "husky install",
     "check-types": "tsc --pretty --noEmit",
     "check-format": "prettier --check .",
-    "check-lint": "eslint . --ext ts --ext tsx --ext js" 
+    "check-lint": "eslint . --ext ts --ext tsx --ext js"
   },
   "husky": {
     "hooks": {
@@ -23,7 +23,9 @@
   "author": "Denny Alvito Ginting",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "eslint": "^8.53.0",
@@ -41,8 +43,16 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "nodemon": "^3.0.1"
+    "joi": "^17.11.0",
+    "moment": "^2.29.4",
+    "mongoose": "^8.0.0",
+    "nodemon": "^3.0.1",
+    "pino": "^8.16.1",
+    "pino-pretty": "^10.2.3",
+    "uuid": "^9.0.1"
   }
 }
